--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
                         <div id="collapseFour" class="panel-collapse collapse">
                             <div class="panel-body" style="position: relative; padding: 30% 45%;">
                                 <iframe
-                                    src="//player.bilibili.com/player.html?aid=848601032&bvid=BV1GL4y1B7t2&cid=422947892&page=1&as_wide=1&high_quality=1&autoplay=false&danmaku="
+                                    src="//player.bilibili.com/player.html?aid=848601032&bvid=BV1GL4y1B7t2&cid=422947892&page=1&as_wide=1&high_quality=1&autoplay=0"
                                     scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"
                                     style="position: absolute; width: 90%; height: 90%; left: 45px; top: 30px;">
                                 </iframe>
@@ -580,7 +580,7 @@
                         <div id="collapseFifteen" class="panel-collapse collapse">
                             <div class="panel-body" style="position: relative; padding: 30% 45%;">
                                 <iframe
-                                    src="//player.bilibili.com/player.html?aid=477568084&bvid=BV1pK41117r6&cid=959198558&page=1&as_wide=1&high_quality=1&autoplay=false&danmaku="
+                                    src="//player.bilibili.com/player.html?aid=477568084&bvid=BV1pK41117r6&cid=959198558&page=1&as_wide=1&high_quality=1&autoplay=0"
                                     scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"
                                     style="position: absolute; width: 90%; height: 90%; left: 45px; top: 30px;">
                                 </iframe>
@@ -656,7 +656,7 @@
                         <div id="collapseEle" class="panel-collapse collapse">
                             <div class="panel-body" style="position: relative; padding: 30% 45%;">
                                 <iframe
-                                    src="//player.bilibili.com/player.html?aid=773303941&bvid=BV1F14y1e7Pm&cid=839739368&page=1&as_wide=1&high_quality=1&autoplay=false&danmaku="
+                                    src="//player.bilibili.com/player.html?aid=773303941&bvid=BV1F14y1e7Pm&cid=839739368&page=1&as_wide=1&high_quality=1&autoplay=0"
                                     scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"
                                     style="position: absolute; width: 90%; height: 90%; left: 45px; top: 30px;">
                                 </iframe>
@@ -722,7 +722,7 @@
                         <div id="collapseFift" class="panel-collapse collapse">
                             <div class="panel-body" style="position: relative; padding: 30% 45%;">
                                 <iframe
-                                    src="//player.bilibili.com/player.html?aid=992620685&bvid=BV1Vs4y1f7Tq&cid=1025544097&page=1&as_wide=1&high_quality=1&autoplay=false&danmaku="
+                                    src="//player.bilibili.com/player.html?aid=992620685&bvid=BV1Vs4y1f7Tq&cid=1025544097&page=1&as_wide=1&high_quality=1&autoplay=0"
                                     scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"
                                     style="position: absolute; width: 90%; height: 90%; left: 45px; top: 30px;">
                                 </iframe>
@@ -798,7 +798,7 @@
                         <div id="collapseFort" class="panel-collapse collapse">
                             <div class="panel-body" style="position: relative; padding: 30% 45%;">
                                 <iframe
-                                    src="//player.bilibili.com/player.html?aid=348608297&bvid=BV12R4y1C721&cid=918781354&page=1&as_wide=1&high_quality=1&autoplay=false&danmaku="
+                                    src="//player.bilibili.com/player.html?aid=348608297&bvid=BV12R4y1C721&cid=918781354&page=1&as_wide=1&high_quality=1&autoplay=0"
                                     scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"
                                     style="position: absolute; width: 90%; height: 90%; left: 45px; top: 30px;">
                                 </iframe>
@@ -880,7 +880,7 @@
                         <div id="collapseTwe" class="panel-collapse collapse">
                             <div class="panel-body" style="position: relative; padding: 30% 45%;">
                                 <iframe
-                                    src="//player.bilibili.com/player.html?aid=471957748&bvid=BV1nT411A7gX&cid=802281018&page=1&as_wide=1&high_quality=1&autoplay=false&danmaku="
+                                    src="//player.bilibili.com/player.html?aid=471957748&bvid=BV1nT411A7gX&cid=802281018&page=1&as_wide=1&high_quality=1&autoplay=0"
                                     scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"
                                     style="position: absolute; width: 90%; height: 90%; left: 45px; top: 30px;">
                                 </iframe>
@@ -967,7 +967,7 @@
                         <div id="collapseThirt" class="panel-collapse collapse">
                             <div class="panel-body" style="position: relative; padding: 30% 45%;">
                                 <iframe
-                                    src="//player.bilibili.com/player.html?aid=945952024&bvid=BV1pW4y1g75a&cid=914642317&page=1&as_wide=1&high_quality=1&autoplay=false&danmaku="
+                                    src="//player.bilibili.com/player.html?aid=945952024&bvid=BV1pW4y1g75a&cid=914642317&page=1&as_wide=1&high_quality=1&autoplay=0"
                                     scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"
                                     style="position: absolute; width: 90%; height: 90%; left: 45px; top: 30px;">
                                 </iframe>
@@ -1135,7 +1135,7 @@
                         <div id="collapseSixt" class="panel-collapse collapse">
                             <div class="panel-body" style="position: relative; padding: 30% 45%;">
                                 <iframe
-                                    src="//player.bilibili.com/player.html?aid=438370453&bvid=BV1KL411o7Mh&cid=1051194423&page=1&as_wide=1&high_quality=1&autoplay=false&danmaku="
+                                    src="//player.bilibili.com/player.html?aid=438370453&bvid=BV1KL411o7Mh&cid=1051194423&page=1&as_wide=1&high_quality=1&autoplay=0"
                                     scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"
                                     style="position: absolute; width: 90%; height: 90%; left: 45px; top: 30px;">
                                 </iframe>
@@ -1286,7 +1286,7 @@
                         <div id="collapseTen" class="panel-collapse collapse">
                             <div class="panel-body" style="position: relative; padding: 30% 45%;">
                                 <iframe
-                                    src="//player.bilibili.com/player.html?aid=853949573&bvid=BV1TL4y1F7fr&cid=715619957&page=1&as_wide=1&high_quality=1&autoplay=false&danmaku="
+                                    src="//player.bilibili.com/player.html?aid=853949573&bvid=BV1TL4y1F7fr&cid=715619957&page=1&as_wide=1&high_quality=1&autoplay=0"
                                     scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"
                                     style="position: absolute; width: 90%; height: 90%; left: 45px; top: 30px;">
                                 </iframe>
@@ -1317,7 +1317,7 @@
                         <div id="collapseNine" class="panel-collapse collapse">
                             <div class="panel-body" style="position: relative; padding: 30% 45%;">
                                 <iframe
-                                    src="//player.bilibili.com/player.html?aid=339722692&bvid=BV1pR4y1V7cH&cid=549062564&page=1&as_wide=1&high_quality=1&autoplay=false&danmaku="
+                                    src="//player.bilibili.com/player.html?aid=339722692&bvid=BV1pR4y1V7cH&cid=549062564&page=1&as_wide=1&high_quality=1&autoplay=0"
                                     scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"
                                     style="position: absolute; width: 90%; height: 90%; left: 45px; top: 30px;">
                                 </iframe>
@@ -1358,7 +1358,7 @@
                         <div id="collapseEight" class="panel-collapse collapse">
                             <div class="panel-body" style="position: relative; padding: 30% 45%;">
                                 <iframe
-                                    src="//player.bilibili.com/player.html?aid=634999411&bvid=BV1Hb4y1v7cg&cid=464279659&page=1&as_wide=1&high_quality=1&autoplay=false&danmaku="
+                                    src="//player.bilibili.com/player.html?aid=634999411&bvid=BV1Hb4y1v7cg&cid=464279659&page=1&as_wide=1&high_quality=1&autoplay=0"
                                     scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"
                                     style="position: absolute; width: 90%; height: 90%; left: 45px; top: 30px;">
                                 </iframe>
@@ -1390,7 +1390,7 @@
                         <div id="collapseThree" class="panel-collapse collapse">
                             <div class="panel-body" style="position: relative; padding: 30% 45%;">
                                 <iframe
-                                    src="//player.bilibili.com/player.html?aid=717225183&bvid=BV1xX4y1F7yQ&cid=385192846&page=1&as_wide=1&high_quality=1&autoplay=false&danmaku="
+                                    src="//player.bilibili.com/player.html?aid=717225183&bvid=BV1xX4y1F7yQ&cid=385192846&page=1&as_wide=1&high_quality=1&autoplay=0"
                                     scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"
                                     style="position: absolute; width: 90%; height: 90%; left: 45px; top: 30px;">
                                 </iframe>
@@ -1436,7 +1436,7 @@
                         <div id="collapseSeven" class="panel-collapse collapse">
                             <div class="panel-body" style="position: relative; padding: 30% 45%;">
                                 <iframe
-                                    src="//player.bilibili.com/player.html?aid=209603594&bvid=BV1Ah411x7mD&cid=453572772&page=1&as_wide=1&high_quality=1&autoplay=false&danmaku="
+                                    src="//player.bilibili.com/player.html?aid=209603594&bvid=BV1Ah411x7mD&cid=453572772&page=1&as_wide=1&high_quality=1&autoplay=0"
                                     scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"
                                     style="position: absolute; width: 90%; height: 90%; left: 45px; top: 30px;">
                                 </iframe>
@@ -1468,7 +1468,7 @@
                         <div id="collapseTwo" class="panel-collapse collapse">
                             <div class="panel-body" style="position: relative; padding: 30% 45%;">
                                 <iframe
-                                    src="//player.bilibili.com/player.html??aid=418798680&bvid=BV1RV411s7Ki&cid=360880871&page=1&as_wide=1&high_quality=1&autoplay=false&danmaku="
+                                    src="//player.bilibili.com/player.html??aid=418798680&bvid=BV1RV411s7Ki&cid=360880871&page=1&as_wide=1&high_quality=1&autoplay=0"
                                     scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"
                                     style="position: absolute; width: 90%; height: 90%; left: 45px; top: 30px;">
                                 </iframe>
@@ -1502,7 +1502,7 @@
                         <div id="collapseFive" class="panel-collapse collapse">
                             <div class="panel-body" style="position: relative; padding: 30% 45%;">
                                 <iframe
-                                    src="//player.bilibili.com/player.html?aid=932236080&bvid=BV1hM4y157jA&cid=385197593&page=1&as_wide=1&high_quality=1&autoplay=false&danmaku="
+                                    src="//player.bilibili.com/player.html?aid=932236080&bvid=BV1hM4y157jA&cid=385197593&page=1&as_wide=1&high_quality=1&autoplay=0"
                                     scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"
                                     style="position: absolute; width: 90%; height: 90%; left: 45px; top: 30px;">
                                 </iframe>
@@ -1535,7 +1535,7 @@
                         <div id="collapseOne" class="panel-collapse collapse">
                             <div class="panel-body" style="position: relative; padding: 30% 45%;">
                                 <iframe
-                                    src="//player.bilibili.com/player.html??aid=630120036&bvid=BV1qb4y1D7ht&cid=321790053&page=1&as_wide=1&high_quality=1&autoplay=false&danmaku="
+                                    src="//player.bilibili.com/player.html??aid=630120036&bvid=BV1qb4y1D7ht&cid=321790053&page=1&as_wide=1&high_quality=1&autoplay=0"
                                     scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"
                                     style="position: absolute; width: 90%; height: 90%; left: 45px; top: 30px;">
                                 </iframe>
@@ -1578,7 +1578,7 @@
                         <div id="collapseSix" class="panel-collapse collapse">
                             <div class="panel-body" style="position: relative; padding: 30% 45%;">
                                 <iframe
-                                    src="//player.bilibili.com/player.html?aid=549172137&bvid=BV1Fq4y1G79C&cid=442858784&page=1&as_wide=1&high_quality=1&autoplay=false&danmaku="
+                                    src="//player.bilibili.com/player.html?aid=549172137&bvid=BV1Fq4y1G79C&cid=442858784&page=1&as_wide=1&high_quality=1&autoplay=0"
                                     scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"
                                     style="position: absolute; width: 90%; height: 90%; left: 45px; top: 30px;">
                                 </iframe>
@@ -1598,7 +1598,7 @@
                         <div id="collapseSix1" class="panel-collapse collapse">
                             <div class="panel-body" style="position: relative; padding: 30% 45%;">
                                 <iframe
-                                    src="//player.bilibili.com/player.html?aid=223096399&bvid=BV198411c7kw&cid=973064412&page=1&as_wide=1&high_quality=1&autoplay=false&danmaku="
+                                    src="//player.bilibili.com/player.html?aid=223096399&bvid=BV198411c7kw&cid=973064412&page=1&as_wide=1&high_quality=1&autoplay=0"
                                     scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"
                                     style="position: absolute; width: 90%; height: 90%; left: 45px; top: 30px;">
                                 </iframe>
