--- a/index.html
+++ b/index.html
@@ -1578,34 +1578,13 @@
                         <div id="collapseSix" class="panel-collapse collapse">
                             <div class="panel-body" style="position: relative; padding: 30% 45%;">
                                 <iframe
-                                    src="//player.bilibili.com/player.html?aid=549172137&bvid=BV1Fq4y1G79C&cid=442858784&page=1&as_wide=1&high_quality=1&autoplay=0"
+                                    src="//player.bilibili.com/player.html?aid=549172137&bvid=BV1Fq4y1G79C&cid=442858784&page=1&high_quality=1&autoplay=0"
                                     scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"
                                     style="position: absolute; width: 90%; height: 90%; left: 45px; top: 30px;">
                                 </iframe>
                             </div>
                         </div>
                     </div>
-
-                    <div class="panel panel-default" hidden="hidden">
-                        <div class="panel-heading">
-                            <h4 class="panel-title">
-                                <a data-toggle="collapse" data-parent="#accordion" href="#collapseSix1">
-                                    <i class="fa fa-folder-open-o" aria-hidden="true">&nbsp;&nbsp;Click here to
-                                        unfold/fold video.</i>
-                                </a>
-                            </h4>
-                        </div>
-                        <div id="collapseSix1" class="panel-collapse collapse">
-                            <div class="panel-body" style="position: relative; padding: 30% 45%;">
-                                <iframe
-                                    src="//player.bilibili.com/player.html?aid=223096399&bvid=BV198411c7kw&cid=973064412&page=1&as_wide=1&high_quality=1&autoplay=0"
-                                    scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"
-                                    style="position: absolute; width: 90%; height: 90%; left: 45px; top: 30px;">
-                                </iframe>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- <iframe src="//player.bilibili.com/player.html?aid=223096399&bvid=BV198411c7kw&cid=973064412&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe> -->
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[26] S. Liu, <b>Z. Gao</b>, J. Zhang, M. D. Renzo and M. -S. Alouini, "Deep Denoising
