--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 
 
 <body>
-    <!-- <div class="center">
+    <div class="center">
         <br>
         <span class="center_text">
-            Powered by <a href="https://scliubit.github.io/cv_en" target="_blank">Shicong Liu</a>
+            Suggest using Chrome for better experience.
         </span>
-    </div> -->
+    </div>
     <a id="home" class="anchor"></a>
 
     <div id="container">
