--- a/index.html
+++ b/index.html
@@ -1577,7 +1577,7 @@
                         </div>
                         <div id="collapseSix" class="panel-collapse collapse">
                             <div class="panel-body" style="position: relative; padding: 30% 45%;">
-                                <iframe
+                                <iframe allow="autoplay=false"
                                     src="//player.bilibili.com/player.html?aid=549172137&bvid=BV1Fq4y1G79C&cid=442858784&page=1&high_quality=1&autoplay=0"
                                     scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"
                                     style="position: absolute; width: 90%; height: 90%; left: 45px; top: 30px;">
