--- a/index.html
+++ b/index.html
@@ -2499,43 +2499,39 @@
                     <ul>
                         <font color="#99a2aa">Ranking in no particular order</font>
                         <li>
-                            Sheng Chen, University of Southampton, Fellow of the United Kingdom Royal Academy of
-                            Engineering, Fellow of IEEE, and fellow of IET.[<a
+                            Sheng Chen (陈生), 英国南安普顿大学, 英国皇家工程院院士, Fellow of IEEE, and fellow of IET.[<a
                                 href="http://scholar.google.co.uk/citations?user=ZikGt_kAAAAJ&hl=en%22%22"
                                 target="_blank">Google Scholar</a>][<a href="https://www.southampton.ac.uk/~sqc/"
                                 target="_blank">Homepage</a>]
                         </li>
                         <li>
-                            Lajos Hanzo, University of Southampton, Foreign Member of the Hungarian Science Academy, a
-                            Fellow of the Royal Academy of Engineering (FREng), lET, and EURASIP, and holds the Eric
-                            Sumner Field Award.[<a href="https://scholar.google.com/citations?hl=en&user=p0jnEW0AAAAJ"
+                            Lajos Hanzo, 英国南安普顿大学, 匈牙利科学院外籍院士, 英国皇家工程院院士, Fellow of IEEE, IET, and EURASIP.[<a href="https://scholar.google.com/citations?hl=en&user=p0jnEW0AAAAJ"
                                 target="_blank">Google Scholar</a>][<a
                                 href="https://www-mobile.ecs.soton.ac.uk/newcomms/?q=people/lh"
                                 target="_blank">Homepage</a>]
                         </li>
                         <li>
-                            Derrick Wing Kwan Ng, University of New South Wales, Fellow of IEEE.[<a
+                            Derrick Wing Kwan Ng (吳榮坤), 澳大利亚新南威尔士大学 (UNSW) 副教授, Fellow of IEEE.[<a
                                 href="https://scholar.google.ca/citations?user=NUJSHxoAAAAJ&hl=en"
                                 target="_blank">Google Scholar</a>][<a
                                 href="http://www2.ee.unsw.edu.au/~derrick/index.html" target="_blank">Homepage</a>]
                         </li>
-                        <li>Marco Di Renzo, CNRS & Paris-Saclay University, IEEE Fellow,
-                            Editor-in-Chief of <span style="font-variant-caps: small-caps;">IEEE Commun. Lett.</span>[<a
+                        <li>Marco Di Renzo, 法国国家科学研究中心 (CNRS) & 巴黎-萨克雷大学教授, Fellow of IEEE,
+                            <span style="font-variant-caps: small-caps;">IEEE Commun. Lett.</span> 期刊主编 (2020-2023)[<a
                                 href="https://scholar.google.it/citations?user=5dRt0OoAAAAJ&hl=fr&oi=ao"
                                 target="_blank">Google Scholar</a>]
                         </li>
                         <li>
-                            Mohamed-Slim Alouini, King Abdullah University of Science and
-                            Technology, Fellow of IEEE.[<a
+                            Mohamed-Slim Alouini, 阿卜杜拉国王科技大学 (KAUST) 教授, Fellow of IEEE.[<a
                                 href="https://scholar.google.com/citations?hl=zh-CN&user=HqIyyXcAAAAJ"
                                 target="_blank">Google Scholar</a>]
                         </li>
-                        <li>Kai-Kit Wong, University College London, Fellow of IEEE.[<a
+                        <li>Kai-Kit Wong, 英国伦敦大学学院 (UCL) 教授, Fellow of IEEE.[<a
                                 href="https://scholar.google.com.hk/citations?user=kVhcY0gAAAAJ&hl=zh-CN&oi=ao"
                                 target="_blank">Google Scholar</a>][<a href="https://www.ee.ucl.ac.uk/~kwong/"
                                 target="_blank">Homepage</a>]
                         </li>
-                        <li>Robert Schober, Friedrich-Alexander-Universiat Erlangen-Nurnberg, Fellow of IEEE.[<a
+                        <li>Robert Schober, 埃尔兰根-纽伦堡弗里德里希-亚历山大大学 (FAU) 教授, Fellow of IEEE.[<a
                                 href="https://scholar.google.com.hk/citations?user=Uu0BpX8AAAAJ&hl=zh-CN&oi=ao"
                                 target="_blank">Google Scholar</a>][<a
                                 href="https://www.tf.fau.eu/person/schober-robert/" target="_blank">Homepage</a>]
