--- a/index.html
+++ b/index.html
@@ -162,18 +162,6 @@
                     )
                 </li>
 
-                <li> <b>
-                        <font color="#FF0000">[2022.12]</font>
-                    </b> Paper of Xingyu Zhou was accepted by IEEE Network (
-                    <font>周星宇论文被IEEE Network (IF=10.294)期刊录用</font>)【基于OTFS-NOMA的低轨卫星接入】
-                </li>
-
-                <li> <b>
-                        <font color="#FF0000">[2022.12]</font>
-                    </b> Paper of Minghui Wu was accepted by IEEE JSAC (
-                    <font>吴铭晖论文被IEEE JSAC (IF=13.081)期刊录用</font>)【基于AI的率分裂和Thz智能超表面传输】
-                </li>
-
 
 
                 <details>
@@ -184,6 +172,17 @@
                         <font>高镇入选重要期刊IEEE Trans. Veh. Technol. 编委</font>
                     </a>)
                 </li> -->
+                    <li> <b>
+                            <font color="#FF0000">[2022.12]</font>
+                        </b> Paper of Xingyu Zhou was accepted by IEEE Network (
+                        <font>周星宇论文被IEEE Network (IF=10.294)期刊录用</font>)【基于OTFS-NOMA的低轨卫星接入】
+                    </li>
+
+                    <li> <b>
+                            <font color="#FF0000">[2022.12]</font>
+                        </b> Paper of Minghui Wu was accepted by IEEE JSAC (
+                        <font>吴铭晖论文被IEEE JSAC (IF=13.081)期刊录用</font>)【基于AI的率分裂和Thz智能超表面传输】
+                    </li>
                     <li> <b>
                             <font color="#FF0000">[2022.11]</font>
                         </b> Ph.D. student Ke, Qiao, and Mei were awarded prestigious PhD Scholarship (
@@ -2312,7 +2311,7 @@
                     </b>: </p>
                 <font size="3">
                     <ul>
-                        <li><span style="font-variant-caps: small-caps;">Transactions on Vehicular
+                        <li><span style="font-variant-caps: small-caps;">IEEE Transactions on Vehicular
                                 Technology</span></li>
                         <li><span style="font-variant-caps: small-caps;">IEEE Systems Journal</span></li>
                         <li><span style="font-variant-caps: small-caps;">IEEE Communications Letters</span></li>
@@ -2505,7 +2504,8 @@
                                 target="_blank">Homepage</a>]
                         </li>
                         <li>
-                            Lajos Hanzo, 英国南安普顿大学, 匈牙利科学院外籍院士, 英国皇家工程院院士, Fellow of IEEE, IET, and EURASIP.[<a href="https://scholar.google.com/citations?hl=en&user=p0jnEW0AAAAJ"
+                            Lajos Hanzo, 英国南安普顿大学, 匈牙利科学院外籍院士, 英国皇家工程院院士, Fellow of IEEE, IET, and EURASIP.[<a
+                                href="https://scholar.google.com/citations?hl=en&user=p0jnEW0AAAAJ"
                                 target="_blank">Google Scholar</a>][<a
                                 href="https://www-mobile.ecs.soton.ac.uk/newcomms/?q=people/lh"
                                 target="_blank">Homepage</a>]
