--- a/index.html
+++ b/index.html
@@ -295,10 +295,6 @@
                         </a>)
                     </li>
 
-
-
-
-
                     <li> <b>
                             <font color="#FF0000">[2022.05]</font>
                         </b>
@@ -508,7 +504,8 @@
             <A NAME="Interest">
                 <h2><i class="fa fa-search" aria-hidden="true"></i>&nbsp;&nbsp;Research Interest</h2>
             </A>
-            Zhen Gao (Member, IEEE) received the B.S. degree in information engineering from the Beijing Institute of
+            <p style="text-indent: 1.0rem;margin-left: 0.5rem;margin-right: 5.0rem;">
+                Zhen Gao (Member, IEEE) received the B.S. degree in information engineering from the Beijing Institute of
             Technology, Beijing, China, in July 2011, and the Ph.D. degree in communication and signal processing from
             the Tsinghua National Laboratory for Information Science and Technology, Department of Electronic
             Engineering, Tsinghua University, China, in July 2016.
@@ -522,6 +519,7 @@
             of the IEEE Communications Letters, in 2016, the Academic Star of Tsinghua University, in 2016, and the
             Young Elite Scientists Sponsorship Program from the China Association for Science and Technology, from 2018
             to 2021. He currently serves as an Associate Editor for IEEE Access and IEEE Communications Letters.
+
             <br />
             <br />
 
@@ -530,6 +528,8 @@
             。发表SCI论文50余篇，包括9篇ESI高被引论文，2篇前0.1%热点论文，WoS数据库SCI他引1961次。2018年入选中国科协青年人才托举工程，2020年起连续入选爱思唯尔中国高被引学者，2022年入选北京市科技新星和山东省自然科学基金优青，2021
             年获得中国电子学会自然科学一等奖，2022年获得中国电子学会自然科学一等奖。担任IEEE Transactions Vehicular Technology编委、IEEE Communications Letters
             编委、IEEE Systems Journal 编委、Frontiers in Communications and Networks 编委。
+            </p>
+            
 
             <ul>
                 <li><b>
@@ -2498,7 +2498,7 @@
                     <ul>
                         <font color="#99a2aa">Ranking in no particular order</font>
                         <li>
-                            Sheng Chen (陈生), 英国南安普顿大学, 英国皇家工程院院士, Fellow of IEEE, and fellow of IET.[<a
+                            Sheng Chen (陈生), 英国南安普顿大学, 英国皇家工程院院士, Fellow of IEEE, and IET.[<a
                                 href="http://scholar.google.co.uk/citations?user=ZikGt_kAAAAJ&hl=en%22%22"
                                 target="_blank">Google Scholar</a>][<a href="https://www.southampton.ac.uk/~sqc/"
                                 target="_blank">Homepage</a>]
