--- a/index.html
+++ b/index.html
@@ -1092,7 +1092,7 @@
                         </span>
                     </p> -->
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
-                        <span>[55] Z. Li, Z. Gao and T. Li, "Sensing User's Channel and Location with Terahertz
+                        <span>[55] Z. Li, <b>Z. Gao</b> and T. Li, "Sensing User's Channel and Location with Terahertz
                             Extra-Large Reconfigurable Intelligent Surface under Hybrid-Field Beam Squint Effect,"
                             accepted by IEEE J. Sel. Top. Sign. Proces, 2023.
                             [<a href="https://arxiv.org/abs/2305.07184" target="_blank">arXiv</a>]
@@ -1104,24 +1104,24 @@
                     </p>
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
-                        <span>[54] K. Ying, Zhen Gao, Sheng Chen, Mingyu Zhou, Dezhi Zheng, Symeon Chatzinotas, Björn
-                            Ottersten, and H. Vincent Poor, “Quasi-Synchronous Random Access for Massive MIMO-Based LEO
-                            Satellite Constellations,”accepted by IEEE J. Sel. Areas Commun., 2023.
+                        <span>[54] K. Ying, <b>Z. Gao</b>, S. Chen, M. Zhou, D. Zheng, S. Chatzinotas, B. Ottersten, 
+                            and H. V. Poor, "Quasi-Synchronous Random Access for Massive MIMO-Based LEO
+                            Satellite Constellations,"accepted by IEEE J. Sel. Areas Commun., 2023.
                             [<a href="https://arxiv.org/abs/2304.04484" target="_blank">arXiv</a>]
                         </span>
                     </p>
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
-                        <span>[53] Yikun Mei, Zhen Gao, De Mi, Mingyu Zhou, Dezhi Zheng, Michail Matthaiou, Pei Xiao,
-                            Robert Schober, "Massive Access in Extra Large-Scale MIMO With Mixed-ADC Over Near-Field
-                            Channels", accepted by IEEE Trans. Vehicular Technology, 2023.
+                        <span>[53] Y. Mei, <b>Z. Gao</b>, D. Mi, M. Zhou, D. Zheng, M. Matthaiou, P. Xiao,
+                            R. Schober, "Massive Access in Extra Large-Scale MIMO With Mixed-ADC Over Near-Field
+                            Channels," accepted by IEEE Trans. Vehicular Technology, 2023.
                             [<a href="https://arxiv.org/abs/2207.01983" target="_blank">arXiv</a>]
                             [<a href="https://ieeexplore.ieee.org/document/10098957" target="_blank">IEEE URL</a>]
                         </span>
                     </p>
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
-                        <span>[52] Malong Ke, Zhen Gao, Mingyu Zhou, Dezhi Zheng, Derrick Wing Kwan Ng, H. Vincent Poor,
+                        <span>[52] M. Ke, <b>Z. Gao</b>, M. Zhou, D. Zheng, D. W. K. Ng, H. V. Poor,
                             "Next-Generation URLLC with Massive Devices: A Unified Semi-Blind Detection Framework for
                             Sourced and Unsourced Random Access," accepted by IEEE J. Sel. Areas Commun., 2023.
                             [<a href="https://arxiv.org/abs/2303.04414" target="_blank">arXiv</a>]
@@ -1129,9 +1129,9 @@
                     </p>
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
-                        <span>[51] Keke Ying, Zhen Gao, Sheng Chen, Xinyu Gao, Michail Matthaiou, Rui Zhang, and Robert
-                            Schober, ``Reconfigurable Massive MIMO: Harnessing the Power of the Electromagnetic Domain
-                            for Enhanced Information Transfer, '' accepted by IEEE Wireless Communications.
+                        <span>[51] K. Ying, <b>Z. Gao</b>, S. Chen, X. Gao, M. Matthaiou, R. Zhang, and 
+                            R. Schober, "Reconfigurable Massive MIMO: Harnessing the Power of the Electromagnetic Domain
+                            for Enhanced Information Transfer," accepted by IEEE Wireless Communications.
                             [<a href="https://arxiv.org/abs/2302.11385" target="_blank">arXiv</a>]
                             <!-- [<a href="https://ieeexplore.ieee.org/document/9978681" target="_blank">IEEE URL</a>] -->
                         </span>
@@ -1158,7 +1158,7 @@
                     <!-- <iframe src="//player.bilibili.com/player.html?aid=438370453&bvid=BV1KL411o7Mh&cid=1051194423&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe> -->
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
-                        <span>[50] Xinyu Zhu, Yang Huang, Shaoyu Wang, Qihui Wu, Xiaohu Ge, Yuan Liu, <b>Zhen Gao</b>,
+                        <span>[50] X. Zhu, Y. Huang, S. Wang, Q. Wu, X. Ge, Y. Liu, <b>Z. Gao</b>,
                             "Dynamic
                             Spectrum Anti-Jamming with Reinforcement Learning Based on Value Function Approximation," in
                             IEEE Wireless Commun. Lett. vol. 12, no. 2, pp. 386-390, Feb. 2023.
