--- a/index.html
+++ b/index.html
@@ -2480,6 +2480,12 @@
                     <ul>
                         <font color="#99a2aa">Ranking in no particular order</font>
                         <li>
+                            H. Vincent Poor, 美国普林斯顿大学, 美国国家工程院院士, Fellow of IEEE.[<a
+                                href="https://scholar.google.com/citations?user=Dq93mOUAAAAJ&hl=zh-CN"
+                                target="_blank">Google Scholar</a>][<a href="https://ece.princeton.edu/people/h-vincent-poor"
+                                target="_blank">Homepage</a>]
+                        </li>
+                        <li>
                             Sheng Chen (陈生), 英国南安普顿大学, 英国皇家工程院院士, Fellow of IEEE, and IET.[<a
                                 href="http://scholar.google.co.uk/citations?user=ZikGt_kAAAAJ&hl=en%22%22"
                                 target="_blank">Google Scholar</a>][<a href="https://www.southampton.ac.uk/~sqc/"
@@ -2493,12 +2499,19 @@
                                 target="_blank">Homepage</a>]
                         </li>
                         <li>
+                            Robert Schober, 埃尔兰根-纽伦堡弗里德里希-亚历山大大学 (FAU) 教授, 加拿大工程院院士, 德国工程院院士, Fellow of IEEE.[<a
+                            href="https://scholar.google.com.hk/citations?user=Uu0BpX8AAAAJ&hl=zh-CN&oi=ao"
+                            target="_blank">Google Scholar</a>][<a
+                            href="https://www.tf.fau.eu/person/schober-robert/" target="_blank">Homepage</a>]
+                        </li>
+                        <li>
                             Derrick Wing Kwan Ng (吳榮坤), 澳大利亚新南威尔士大学 (UNSW) 副教授, Fellow of IEEE.[<a
                                 href="https://scholar.google.ca/citations?user=NUJSHxoAAAAJ&hl=en"
                                 target="_blank">Google Scholar</a>][<a
                                 href="http://www2.ee.unsw.edu.au/~derrick/index.html" target="_blank">Homepage</a>]
                         </li>
-                        <li>Marco Di Renzo, 法国国家科学研究中心 (CNRS) & 巴黎-萨克雷大学教授, Fellow of IEEE,
+                        <li>
+                            Marco Di Renzo, 法国国家科学研究中心 (CNRS) & 巴黎-萨克雷大学教授, Fellow of IEEE,
                             <span style="font-variant-caps: small-caps;">IEEE Commun. Lett.</span> 期刊主编 (2020-2023)[<a
                                 href="https://scholar.google.it/citations?user=5dRt0OoAAAAJ&hl=fr&oi=ao"
                                 target="_blank">Google Scholar</a>]
@@ -2508,16 +2521,24 @@
                                 href="https://scholar.google.com/citations?hl=zh-CN&user=HqIyyXcAAAAJ"
                                 target="_blank">Google Scholar</a>]
                         </li>
-                        <li>Kai-Kit Wong, 英国伦敦大学学院 (UCL) 教授, Fellow of IEEE.[<a
+                        <li>
+                            Kai-Kit Wong, 英国伦敦大学学院 (UCL) 教授, Fellow of IEEE.[<a
                                 href="https://scholar.google.com.hk/citations?user=kVhcY0gAAAAJ&hl=zh-CN&oi=ao"
                                 target="_blank">Google Scholar</a>][<a href="https://www.ee.ucl.ac.uk/~kwong/"
                                 target="_blank">Homepage</a>]
                         </li>
-                        <li>Robert Schober, 埃尔兰根-纽伦堡弗里德里希-亚历山大大学 (FAU) 教授, Fellow of IEEE.[<a
-                                href="https://scholar.google.com.hk/citations?user=Uu0BpX8AAAAJ&hl=zh-CN&oi=ao"
-                                target="_blank">Google Scholar</a>][<a
-                                href="https://www.tf.fau.eu/person/schober-robert/" target="_blank">Homepage</a>]
+                        <li>
+                            Symeon Chatzinotas, 卢森堡大学 (LU) 教授, Fellow of IEEE.[<a
+                            href="https://scholar.google.com/citations?user=6jeAUkoAAAAJ&hl=zh-CN"
+                            target="_blank">Google Scholar</a>][<a href="https://wwwen.uni.lu/snt/people/symeon_chatzinotas"
+                            target="_blank">Homepage</a>]
                         </li>
+                        <li>
+                            Björn Ottersten, 卢森堡大学 (LU) 教授, Fellow of IEEE.[<a
+                            href="https://scholar.google.com/citations?hl=zh-CN&user=OAWYhh0AAAAJ"
+                            target="_blank">Google Scholar</a>][<a href="https://wwwfr.uni.lu/snt/people/bjoern_ottersten"
+                            target="_blank">Homepage</a>]
+                        </li>   
                     </ul>
                 </font>
                 <br />
