--- a/index.html
+++ b/index.html
@@ -2480,19 +2480,19 @@
                     <ul>
                         <font color="#99a2aa">Ranking in no particular order</font>
                         <li>
-                            H. Vincent Poor, 美国普林斯顿大学, 美国国家工程院院士, Fellow of IEEE.[<a
+                            H. Vincent Poor, 美国普林斯顿大学教授, 美国国家工程院院士, Fellow of IEEE.[<a
                                 href="https://scholar.google.com/citations?user=Dq93mOUAAAAJ&hl=zh-CN"
                                 target="_blank">Google Scholar</a>][<a href="https://ece.princeton.edu/people/h-vincent-poor"
                                 target="_blank">Homepage</a>]
                         </li>
                         <li>
-                            Sheng Chen (陈生), 英国南安普顿大学, 英国皇家工程院院士, Fellow of IEEE, and IET.[<a
+                            Sheng Chen (陈生), 英国南安普顿大学教授, 英国皇家工程院院士, Fellow of IEEE, and IET.[<a
                                 href="http://scholar.google.co.uk/citations?user=ZikGt_kAAAAJ&hl=en%22%22"
                                 target="_blank">Google Scholar</a>][<a href="https://www.southampton.ac.uk/~sqc/"
                                 target="_blank">Homepage</a>]
                         </li>
                         <li>
-                            Lajos Hanzo, 英国南安普顿大学, 匈牙利科学院外籍院士, 英国皇家工程院院士, Fellow of IEEE, IET, and EURASIP.[<a
+                            Lajos Hanzo, 英国南安普顿大学教授, 匈牙利科学院外籍院士, 英国皇家工程院院士, Fellow of IEEE, IET, and EURASIP.[<a
                                 href="https://scholar.google.com/citations?hl=en&user=p0jnEW0AAAAJ"
                                 target="_blank">Google Scholar</a>][<a
                                 href="https://www-mobile.ecs.soton.ac.uk/newcomms/?q=people/lh"
@@ -2528,13 +2528,13 @@
                                 target="_blank">Homepage</a>]
                         </li>
                         <li>
-                            Symeon Chatzinotas, 卢森堡大学 (LU) 教授, Fellow of IEEE.[<a
+                            Symeon Chatzinotas, 卢森堡大学教授, Fellow of IEEE.[<a
                             href="https://scholar.google.com/citations?user=6jeAUkoAAAAJ&hl=zh-CN"
                             target="_blank">Google Scholar</a>][<a href="https://wwwen.uni.lu/snt/people/symeon_chatzinotas"
                             target="_blank">Homepage</a>]
                         </li>
                         <li>
-                            Björn Ottersten, 卢森堡大学 (LU) 教授, Fellow of IEEE.[<a
+                            Björn Ottersten, 卢森堡大学教授, Fellow of IEEE.[<a
                             href="https://scholar.google.com/citations?hl=zh-CN&user=OAWYhh0AAAAJ"
                             target="_blank">Google Scholar</a>][<a href="https://wwwfr.uni.lu/snt/people/bjoern_ottersten"
                             target="_blank">Homepage</a>]
