--- a/index.html
+++ b/index.html
@@ -1125,10 +1125,14 @@
                     </div>
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
-                        <span>[54] K. Ying, <b>Z. Gao</b>, S. Chen, M. Zhou, D. Zheng, S. Chatzinotas, B. Ottersten, 
-                            and H. V. Poor, "Quasi-Synchronous Random Access for Massive MIMO-Based LEO
-                            Satellite Constellations,"accepted by IEEE J. Sel. Areas Commun., 2023.
+                        <span>[54] K. Ying, <b>Z. Gao</b>, S. Chen, M. Zhou, D. Zheng, S. Chatzinotas, B. Ottersten, and H. V. Poor, 
+                            "Quasi-Synchronous Random Access for Massive MIMO-Based LEO Satellite Constellations," 
+                            in IEEE Journal on Selected Areas in Communications, vol. 41, no. 6, pp. 1702-1722, June 2023.
                             [<a href="https://arxiv.org/abs/2304.04484" target="_blank">arXiv</a>]
+                            [<a href="https://ieeexplore.ieee.org/document/10123361" target="_blank">IEEE URL</a>]
+                            [<a href="https://github.com/kekeyingBIT/LEO" target="_blank">
+                                <font color="#FF0000">Codes</font>
+                            </a>]
                         </span>
                     </p>
 
