--- a/index.html
+++ b/index.html
@@ -1161,6 +1161,9 @@
                             Channels," accepted by IEEE Trans. Vehicular Technology, 2023.
                             [<a href="https://arxiv.org/abs/2207.01983" target="_blank">arXiv</a>]
                             [<a href="https://ieeexplore.ieee.org/document/10098957" target="_blank">IEEE URL</a>]
+                            [<a href="https://github.com/meiyikun/TVT2023_Near-field_Massive_Access" target="_blank">
+                                <font color="#FF0000">Codes</font>
+                            </a>]
                         </span>
                     </p>
 
@@ -1404,7 +1407,7 @@
                             10.1109/TWC.2021.3107576.
                             (<i>Pre-Print</i>)
                             [<a href="https://arxiv.org/abs/2011.07928" target="_blank">arXiv</a>]
-                            [<a href="https://github.com/gaozhen16/y.mei-twc21" target="_blank">
+                            [<a href="https://github.com/meiyikun/TWC2022_Massive_Access" target="_blank">
                                 <font color="#FF0000">Codes</font>
                             </a>]
                             [<a href="https://ieeexplore.ieee.org/document/9527086" target="_blank">IEEE URL</a>]
