--- a/index.html
+++ b/index.html
@@ -2483,7 +2483,7 @@
 
                     <li> <b>
                             <font color="#FF0000">[2023]</font>
-                        </b> <a href="https://yang05941601.github.io/" target="_blank">王洋</a>, 工学硕士,&nbsp; 目前就职于中兴通讯.
+                        </b> <a href="https://yang05941601.github.io/" target="_blank">王洋</a>, 工学硕士,&nbsp; 目前就职于中兴通讯（上海）.
 
                     <li> <b>
                             <font color="#FF0000">[2022]</font>
@@ -2495,8 +2495,14 @@
 
                     <li> <b>
                             <font color="#FF0000">[2021]</font>
-                        </b> 马西锁, 工学硕士,&nbsp; 目前就职于中国电子科技集团公司第五十四研究所.
+                        </b> 马西锁, 专业硕士,&nbsp; 目前就职于中国电子科技集团公司第五十四研究所.
                     </li>
+
+                    <li> <b>
+                            <font color="#FF0000">[2019]</font>
+                        </b> 毛杰宁, 专业硕士,&nbsp; 目前就职于中兴通讯（深圳）.
+                    </li>
+
                 </ul>
                 <br />
 
